# moment-digest

./: .gitignore  Cargo.toml  Trunk.toml  index.html
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/commands/: pick_folder.rs
src-tauri/src/commands/pick_folder/: file_dialog_builder_trait.rs  list_files_in_directory.rs  pick_folder_impl.rs
src/app/: tauri_extern.rs
test-fixture/: 202309.md  202310.md
