[package]
name = "moment-digest-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
serde = { version = "1.0.192", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"
wasm-bindgen = { version = "0.2.88", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.38"
web-sys = "0.3.65"
js-sys = "0.3.65"

[workspace]
members = ["src-tauri"]
